--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
     </head>
 
-    <body>
+    <body onload="document.body.style.opacity='1'">
         <div class="header2">
             <ul>
                 <li>
@@ -50,7 +50,7 @@
         <br><br>
 
         <div class="body">
-            <br>
+            <br><br><br>
             <div class="flex">
                 <img src="Pics/Profile.jpg" alt="Picture of me" id="profile">
                 <h1 class="text1">
@@ -61,7 +61,7 @@
                     any time I can with them.
                 </h1>
             </div>
-            <br>
+            <br><br><br>
         </div>
         <br>
     </body>
