--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html class="no-scroll">
     <head>
     <title>Nathan Nielson</title>
     <link rel="stylesheet" href="style.css">
     </head>
 
-    <body>
+    <body onload="document.body.style.opacity='1'">
+        
         <div class="header">
             <ul>
                 <li>
