--- a/talent1.html
+++ b/talent1.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
     </head>
 
-    <body>
+    <body class="scroll" onload="document.body.style.opacity='1'">
         <div class="header2">
             <ul>
                 <li>
@@ -49,7 +49,7 @@
         </div>
         <br><br>
         <div class="body">
-            <br>
+            <br><br><br>
             <div class="flex">
                 <img src="Pics/PhotoSitePic.png" alt="Fall Break Website" class="website1">
                 <h1 class="text1">
@@ -58,15 +58,16 @@
                     over my fall break.
                 </h1>
             </div>
-            <br><br>
+            <br><br><br>
             <div class="flex">
+                <br>
                 <h1 class="text1">
                     This website was done earlier in the year, and it's a website of our
                     school's news system.
                 </h1>
                 <img src="Pics/StingTVPic.png" alt="Fall Break Website" class="website2">
             </div>
-            <br>
+            <br><br><br>
         </div>
         <br>
     </body>
