--- a/talent2.html
+++ b/talent2.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
     </head>
 
-    <body>
+    <body class="scroll" onload="document.body.style.opacity='1'">
         <div class="header2">
             <ul>
                 <li>
@@ -51,7 +51,7 @@
         <br><br>
 
         <div class="body">
-            <br>
+            <br><br><br>
             <div class="flex">
                 <img src="Pics/Keyboard - Copy.jfif" alt="Piano" class="instrument1">
                 <h1 class="text1">
@@ -60,7 +60,7 @@
                     any other instrument.
                 </h1>
             </div>
-            <br>
+            <br><br><br>
             <div class="flex">
                 <h1 class="text1">
                     I play the trumpet in my high school's jazz and symphonic 
@@ -70,7 +70,7 @@
                 </h1>
                 <img src="Pics/Trumpet.jpeg" alt="Trumpet" class="instrument2">
             </div>
-            <br>
+            <br><br><br>
             <div class="flex">
                 <img src="Pics/Guitar - Copy.jpg" alt="Guitar" class="instrument3">
                 <h1 class="text1">
@@ -82,7 +82,7 @@
                     be able to add that to my list of instruments soon.
                 </h1>
             </div>
-            <br>
+            <br><br><br>
         </div>
         <br>
     </body>
