--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
     </head>
 
-    <body>
+    <body onload="document.body.style.opacity='1'">
         <div class="header2">
             <ul>
                 <li>
