--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
     </head>
 
-    <body onload="document.body.style.opacity='1'">
+    <body class= "scroll"onload="document.body.style.opacity='1'">
         <div class="header2">
             <ul>
                 <li>
